--- a/style.css
+++ b/style.css
@@ -5,5 +5,56 @@
 }
 
 /* header */
+header nav
+{
+    display:flex;
+    justify-content:center;
+    gap:7rem;
+    padding-top: 2rem;
+    background:#404EED;
+    width:100vw;
+    height:auto;
+}
+header nav .icon img
+{
+
+}
+header nav .ul ul
+{
+    display:flex;
+    list-style: none;
+    gap: 2rem;
+    color: white;
+    padding-top: 0.7rem;
+    font-weight: 600;
+    font-size: 1em;
+    transition: all .2s;
+    font-family: Ggsans,sans-serif;
+}
+header nav .ul ul a
+{ 
+    text-decoration:none;
+    color: white;
+}
+header nav .ul ul a:hover
+{ 
+    text-decoration:underline;
+}
+
+header nav .button button
+{
+background-color: white;
+color: black;
+border: none;
+border-radius:1.5em;
+padding: 0.8rem;
+font-weight: 600;
+transition: all .2s;
+font-family: Ggsans,sans-serif;
+}
+header nav .button button:hover{
+    color:#5865F2;
+    transition: all .2s;
+}
 /* main */
 /* footer */
