--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ footer {
     flex-flow: column nowrap;
     justify-content: center;
     align-items: center;
-    background-color: #333;
+    background-color: black;
     color: #fff;
     text-align: center;
 }
@@ -140,4 +140,17 @@ footer .footer-container-end hr{
     color: blue;
     margin-bottom: 1rem;
     margin-top: 1rem;
+}
+
+button {
+  border: none;
+  color: black;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+  background-color: rgb(108, 108, 164);
 }
