--- a/style.css
+++ b/style.css
@@ -79,11 +79,14 @@ header .button2 {
 .backimg {
     display: flex;
     justify-content: space-between;
+    flex-flow:row wrap ;
+    
 }
 
 .backimg-left {
     margin-left: -2rem;
     margin-top: -2rem;
+   
 }
 .backimg-right {
     margin-left: -2rem;
@@ -93,7 +96,7 @@ header nav
 {
     display:flex;
     justify-content:center;
-    gap:7rem;
+    gap:2rem;
     padding-top: 2rem;
     background:#404EED;
     width:100vw;
@@ -114,6 +117,7 @@ header nav .ul ul
     font-size: 1em;
     transition: all .2s;
     font-family: Ggsans,sans-serif;
+    flex-flow: row wrap;
 }
 header nav .ul ul a
 { 
@@ -131,7 +135,7 @@ background-color: white;
 color: black;
 border: none;
 border-radius:1.5em;
-padding: 0.8rem;
+padding: 0.4rem;
 font-weight: 600;
 transition: all .2s;
 font-family: Ggsans,sans-serif;
@@ -150,6 +154,7 @@ header nav .button button:hover{
     display: flex;
     justify-content:center;
     align-items:center ;
+    flex-flow:row wrap;
 }
 .container.image h3{
     color: #23272A;
@@ -173,6 +178,7 @@ header nav .button button:hover{
     display: flex;
     justify-content:center;
     align-items:center ;
+    flex-flow:row wrap;
 }
 
 .second.section h3{
@@ -196,6 +202,7 @@ header nav .button button:hover{
     display: flex;
     justify-content:center;
     align-items:center ;
+    flex-flow:row wrap;
 }
 .third.section h3{
     color: #23272A;
@@ -236,6 +243,7 @@ header nav .button button:hover{
     display: flex;
     justify-content: center;
     text-align: center;
+    flex-flow:row wrap;
 }
 .star{
     background: #f6f6f6;
@@ -410,3 +418,9 @@ button {
   cursor: pointer;
   background-color: rgb(108, 108, 164);
 }
+
+@media only screen and (max-width: 380px) {
+   .fourth image {
+     width: 400px;
+    }
+  }
